--- a/_posts/2017-12-08-equipe.markdown
+++ b/_posts/2017-12-08-equipe.markdown
@@ -231,7 +231,7 @@ Nous travaillons avec les ministères pour :
 <div class="col-md-9 col-xs-12">
 <figcaption>
 
-<p>Jane est une scientifique de l’information et une architecte de l’information qui travaille dans le domaine de l’organisation depuis plus de 25 ans. Elle a conçu des schémas de classification basés sur des normes et centrés sur les utilisateurs, des taxonomies, des thésaurus et des systèmes de navigation du Web et ses conceptions ont été mises en œuvre sur des sites Web, des intranets, des applications interactives menées par des organisations dans les secteurs privé et public.</p><p>En tant qu’employée, sa carrière comprend des rôles de direction et de praticienne à Bell-Northern Research, Nortel, Industrie Canada et Systemscope. En tant que consultante, elle a finalisé plus de 60 projets de transformation numériques avec plusieurs organisations. Elle mène sa propre entreprise de conception indépendante, Aboutness Inc. depuis 2010.
+<p>Jane est une scientifique de l’information et une architecte de l’information qui travaille dans le domaine de l’organisation depuis plus de 25 ans. Elle a conçu des schémas de classification basés sur des normes et centrés sur les utilisateurs, des taxonomies, des thésaurus et des systèmes de navigation du Web et ses conceptions ont été mises en œuvre sur des sites Web, des intranets, des applications interactives menées par des organisations dans les secteurs privé et public.</p><p>En tant qu’employée, sa carrière comprend des rôles de direction et de praticienne à Bell-Northern Research, Nortel, Industrie Canada et Systemscope. En tant que consultante, elle a finalisé plus de 60 projets de transformation numériques avec plusieurs organisations. Elle mène sa propre entreprise de conception indépendante, Aboutness Inc. depuis 2010.</p>
 
 </figcaption>
 </div>
