--- a/_posts/2017-12-08-equipe.markdown
+++ b/_posts/2017-12-08-equipe.markdown
@@ -288,7 +288,7 @@ Nous travaillons avec les ministères pour :
 <div class="col-md-9 col-xs-12">
 <figcaption>
 
-<p>David a débuté sa carrière dans la fonction publique fédérale au sein de l’Agence du Revenu du Canada, en 2007, après des études en littérature française et en enseignement du français. En travaillant à la mise à jour des publications et des pages Web, il s’est découvert une véritable passion : organiser l’information et élaborer le contenu pour les gens, en fonction de leurs besoins réels. Depuis, son objectif est de simplifier et de clarifier le contenu dans le but de permettre aux utilisateurs d’accomplir leurs tâches le plus facilement possible.</p><pIl a poursuivi sa carrière à Service Canada, au sein de l’Éditeur principal de Canada.ca, puis à Affaires mondiales Canada, où il a utilisé son expertise Web pour améliorer le contenu utilisé par des milliers de gens. 
+<p>David a débuté sa carrière dans la fonction publique fédérale au sein de l’Agence du Revenu du Canada, en 2007, après des études en littérature française et en enseignement du français. En travaillant à la mise à jour des publications et des pages Web, il s’est découvert une véritable passion : organiser l’information et élaborer le contenu pour les gens, en fonction de leurs besoins réels. Depuis, son objectif est de simplifier et de clarifier le contenu dans le but de permettre aux utilisateurs d’accomplir leurs tâches le plus facilement possible.</p><p>Il a poursuivi sa carrière à Service Canada, au sein de l’Éditeur principal de Canada.ca, puis à Affaires mondiales Canada, où il a utilisé son expertise Web pour améliorer le contenu utilisé par des milliers de gens. 
 David s’est joint à l’équipe de Transformation numérique du Conseil du Trésor avec le même désir de travailler à rendre la présence Web du gouvernement du Canada plus accessible, plus compréhensible, plus facile à utiliser et plus axée sur les besoins des gens.</p>
 
 </figcaption>
