--- a/_posts/2017-12-08-equipe.markdown
+++ b/_posts/2017-12-08-equipe.markdown
@@ -319,4 +319,4 @@ David s’est joint à l’équipe de Transformation numérique du Conseil du Tr
 
 ## Nous voulons connaître votre opinion.
 
-Prenez part à la conversation numérique sur #CanadaPointca ou envoyez-nous un courriel à l’adresse <information@tbs-sct.gc.ca>
+Prenez part à la conversation numérique sur [#Canadapointca](https://twitter.com/search?q=%23Canadapointca&src=typd) ou envoyez-nous un courriel à l’adresse <information@tbs-sct.gc.ca>
