--- a/_posts/2017-12-11-100-taches-du-gc.markdown
+++ b/_posts/2017-12-11-100-taches-du-gc.markdown
@@ -111,7 +111,7 @@ Toutefois, dans certains cas, soutenir les tâches en ligne est beaucoup plus co
 
 ## Nous voulons connaître votre opinion
 
-Dites-nous ce que vous pensez de la gestion des tâches principales, par courriel à l’adresse <ux.eu@tbs-sct.gc.ca> ou par Twitter en utilisant le mot-clic [#CanadaPointCA](https://twitter.com/search?q=%23CanadaPointCA).
+Dites-nous ce que vous pensez de la gestion des tâches principales, par courriel à l’adresse <information@tbs-sct.gc.ca> ou par Twitter en utilisant le mot-clic [#CanadaPointCA](https://twitter.com/search?q=%23CanadaPointCA).
 
 ## Apprenez-en davantage sur les tâches principales
 
