--- a/_posts/2017-12-11-top-100-for-gc.markdown
+++ b/_posts/2017-12-11-top-100-for-gc.markdown
@@ -116,7 +116,7 @@ In some cases however, supporting tasks online is much more complex, involving t
 
 ## We want to hear from you
 
-Let us know what you think about task management. Email us at <ux.eu@tbs-sct.gc.ca> or tweet using the hashtag [#Canadadotca](https://twitter.com/search?q=%23Canadadotca).
+Let us know what you think about task management. Email us at <information@tbs-sct.gc.ca> or tweet using the hashtag [#Canadadotca](https://twitter.com/search?q=%23Canadadotca).
 
 ## Learn more about top tasks
 
