--- a/_posts/2017-12-11-100-taches-du-gc.markdown
+++ b/_posts/2017-12-11-100-taches-du-gc.markdown
@@ -1,5 +1,5 @@
 ---
-layout: post_fr
+layout: post
 title:  "De quelle façon déterminons-nous les principales tâches pour Canada.ca"
 gradelevel: 7.8
 ref: toptasks
@@ -10,11 +10,11 @@ description: Les tâches – simples et complexes – en lien avec le gouverneme
 alt: Diagramme à secteurs des tâches principales. 1. Obtenir les prévisions météorologiques locales 28 % 2. Obtenir un visa de visiteur 9 % 3. Faire une demande d’immigration au Canada 7 % 4. Obtenir les conditions maritimes 6 % 5. Obtenir une AVE 6%. Le reste du diagramme est divisé en plus petites sections.
 ---
 
-Les gens utilisent nos canaux numériques pour réaliser une grande variété de tâches. Nous disons qu’ils veulent de l’« information » ou des « services ». Ils ne font pas cette distinction – ils consultent Canada.ca avec une idée précise en tête et une tâche à accomplir. S’ils sont en mesure d’accomplir leur tâche, leur besoin est comblé. Dans le cas contraire, nous avons du travail à faire. 
+Les gens utilisent nos canaux numériques pour réaliser une grande variété de tâches. Nous disons qu’ils veulent de l’« information » ou des « services ». Ils ne font pas cette distinction – ils consultent Canada.ca avec une idée précise en tête et une tâche à accomplir. S’ils sont en mesure d’accomplir leur tâche, leur besoin est comblé. Dans le cas contraire, nous avons du travail à faire.
 
 ## Tâches principales
 
-Les tâches – simples et complexes – en lien avec le gouvernement du Canada (GC) se comptent par milliers. Comment nous y prenons-nous pour prioriser? En cernant celles qui sont les plus importantes et les plus utilisées. Nous les appelons les « tâches principales » du GC. Nous nous concentrons sur les 100 tâches principales du gouvernement du Canada. Nous avons commencé à améliorer le contenu de ces tâches principales afin d’accroître le taux de succès des utilisateurs. 
+Les tâches – simples et complexes – en lien avec le gouvernement du Canada (GC) se comptent par milliers. Comment nous y prenons-nous pour prioriser? En cernant celles qui sont les plus importantes et les plus utilisées. Nous les appelons les « tâches principales » du GC. Nous nous concentrons sur les 100 tâches principales du gouvernement du Canada. Nous avons commencé à améliorer le contenu de ces tâches principales afin d’accroître le taux de succès des utilisateurs.
 
 <figure style="margin-top: 50px;" >
 
@@ -60,20 +60,20 @@ Nous commençons par les organismes dont le contenu sur Canada.ca est le plus po
 * Plans ministériels
 * Lettres de mandat (du premier ministre aux ministres du cabinet)
 * Rétroaction ou rapports des centres d’appels
-* Contribution des personnes qui gèrent des programmes 
-* Contribution des employés qui travaillent auprès du public 
+* Contribution des personnes qui gèrent des programmes
+* Contribution des employés qui travaillent auprès du public
 * Études ou enquêtes préalables
 
-#### Les défis de la collecte de données de diverses sources 
+#### Les défis de la collecte de données de diverses sources
 
-* <b>Comparabilité de l’analytique :</b> 
-    * De nombreux outils sont utilisés, mais leur efficacité varie.	
-    * Certains logiciels d’analytique gratuits utilisent seulement un échantillonnage des données des visites au lieu de tout consigner. 
+* <b>Comparabilité de l’analytique :</b>
+    * De nombreux outils sont utilisés, mais leur efficacité varie.
+    * Certains logiciels d’analytique gratuits utilisent seulement un échantillonnage des données des visites au lieu de tout consigner.
     * D’autres font un suivi efficace, mais produisent de piètres rapports.
-* <b>Différence entre les visites et les pages consultées : </b> 
+* <b>Différence entre les visites et les pages consultées : </b>
     * L’accomplissement d’une tâche par une personne réelle est mieux représenté par les visites que par les consultations de pages.	 
-    * Si une tâche requiert la consultation de plusieurs pages, les données sur la consultation de page finissent par gonfler chiffres.	
-* <b>Différence entre les pages de départ et toutes les pages : </b> 
+    * Si une tâche requiert la consultation de plusieurs pages, les données sur la consultation de page finissent par gonfler chiffres.
+* <b>Différence entre les pages de départ et toutes les pages : </b>
     * Des tâches requièrent la consultation de plusieurs pages, alors que d’autres, un seule.  
     * Le trafic combiné de plusieurs pages nuit à la comparabilité.
     * Il est donc important de définir une page de départ par tâche et d’en faire le suivi.
@@ -102,12 +102,12 @@ Au cours de la prochaine année, nous prévoyons peaufiner avec les ministères 
 
 ## Un point de mire sur les tâches principales peut contribuer à améliorer la prestation de service
 
-Beaucoup de personnes vont sur Canada.ca pour accomplir des tâches que nous pouvons soutenir en veillant à ce que notre contenu soit organisé, présenté et rédigé d’une façon qui convient pour les canaux numériques. Cela semble facile, mais il faut tenir compte de beaucoup d’éléments. Voir le Guide de rédaction et les Spécifications du contenu et l'architecture de l'information pour Canada.ca pour plus d’information. 
+Beaucoup de personnes vont sur Canada.ca pour accomplir des tâches que nous pouvons soutenir en veillant à ce que notre contenu soit organisé, présenté et rédigé d’une façon qui convient pour les canaux numériques. Cela semble facile, mais il faut tenir compte de beaucoup d’éléments. Voir le Guide de rédaction et les Spécifications du contenu et l'architecture de l'information pour Canada.ca pour plus d’information.
 
 * [Spécifications sur le contenu et l'architecture de l'information du site Canada.ca](https://www.canada.ca/fr/secretariat-conseil-tresor/services/communications-gouvernementales/specifications-contenu-architecture-information-canada.html)
 * [Guide de rédaction du contenu du site Canada.ca](https://www.canada.ca/fr/secretariat-conseil-tresor/services/communications-gouvernementales/guide-redaction-contenu-canada.html)
 
-Toutefois, dans certains cas, soutenir les tâches en ligne est beaucoup plus complexe, car cela nécessite de la technologie habilitante et une mise à jour de la loi. Quel que soit ce qui est nécessaire, déterminer vos tâches principales et évaluer la capacité des usagers de les accomplir est un bon moyen d’améliorer votre capacité à satisfaire aux besoins des Canadiens sur Canada.ca. 
+Toutefois, dans certains cas, soutenir les tâches en ligne est beaucoup plus complexe, car cela nécessite de la technologie habilitante et une mise à jour de la loi. Quel que soit ce qui est nécessaire, déterminer vos tâches principales et évaluer la capacité des usagers de les accomplir est un bon moyen d’améliorer votre capacité à satisfaire aux besoins des Canadiens sur Canada.ca.
 
 ## Nous voulons connaître votre opinion
 
