Anna and Karina

--- a/_posts/2017-12-08-equipe.markdown
+++ b/_posts/2017-12-08-equipe.markdown
@@ -39,7 +39,7 @@ Nous travaillons avec les ministères pour :
 <div class="col-md-9 col-xs-12">
 <figcaption>
 
-<p>Anna est coordonnatrice de projet au Bureau de la transformation numérique du Secrétariat du Conseil du Trésor du Canada. Il faut beaucoup de travail pour remanier une tâche principale, et Anna y contribue en collaborant avec des partenaires, en gérant les horaires et en obtenant des outils (numériques ou analogiques) au besoin. Au cours des deux dernières années, elle a contribué à la publication et à l’optimisation du contenu Web de Canada.ca par son travail à l’Initiative de renouvellement du Web (IRW). En 2017, Anna et son équipe de l’IRW ont reçu un certificat du dirigeant principal de l’information du Canada en reconnaissance de leur apport important à la fonction publique. Elle est titulaire d’un baccalauréat spécialisé en géographie avec spécialisation en santé et en environnement et a mené des recherches postdoctorales sur l’aquaculture et la politique des pêches au Canada. Elle travaille actuellement à l’obtention de la certification PMP (professionnel de la gestion de projets).
+<p>Anna est coordonnatrice de projet au Bureau de la transformation numérique du Secrétariat du Conseil du Trésor du Canada. Il faut beaucoup de travail pour remanier une tâche principale, et Anna y contribue en collaborant avec des partenaires, en gérant les horaires et en obtenant des outils (numériques ou analogiques) au besoin.</p><p> Au cours des deux dernières années, elle a contribué à la publication et à l’optimisation du contenu Web de Canada.ca par son travail à l’Initiative de renouvellement du Web (IRW). En 2017, Anna et son équipe de l’IRW ont reçu un certificat du dirigeant principal de l’information du Canada en reconnaissance de leur apport important à la fonction publique.</p><p> Elle est titulaire d’un baccalauréat spécialisé en géographie avec spécialisation en santé et en environnement et a mené des recherches postdoctorales sur l’aquaculture et la politique des pêches au Canada. Elle travaille actuellement à l’obtention de la certification PMP (professionnel de la gestion de projets).
 </p>
 
 </figcaption>
@@ -307,7 +307,6 @@ David s’est joint à l’équipe de Transformation numérique du Conseil du Tr
 
 <p>En tant que membre d’une minorité visible, Karina a appris à fusionner les meilleurs aspects des deux cultures et elle croit fermement que le travail acharné est une compétence inestimable.</p>
 
-</p>
 
 </figcaption>
 </div>
