fix typo in Karina

--- a/_posts/2017-12-08-team.markdown
+++ b/_posts/2017-12-08-team.markdown
@@ -292,7 +292,7 @@ She holds an honours Bachelor’s degree in Geography with a specialization in H
 <div class="col-md-9 col-xs-12">
 <figcaption>
 
-<p>Karina is Team Support Officer at the Digital Transformation Office at Treasury Board Secretariat Canada, she comes from Venezuelan where she was a professional and enthusiastic trained journalist. </p>
+<p>Karina is Team Support Officer at the Digital Transformation Office at Treasury Board Secretariat Canada, she comes from Venezuela where she was a professional and enthusiastic trained journalist. </p>
 
 <p>Karina’s studies in Communications and Journalism provide her a solid knowledge base in the use and management of mass media, advertising, marketing and organizational communications. As a Journalist and Radio/Television Host in Venezuela, she produced/hosted a weekly radio show, anchored a local television news, and produced events for media outlets. </p>
 
