--- a/_posts/2017-12-08-team.markdown
+++ b/_posts/2017-12-08-team.markdown
@@ -353,7 +353,6 @@ She holds an honours Bachelor’s degree in Geography with a specialization in H
 
 Join the digital conversation at [#Canadadotca](https://twitter.com/search?q=%23Canadadotca) or send us an email at <information@tbs-sct.gc.ca>
 
-<dt>Date modified:</dt>
-    <dd><time property="dateModified">March 29, 2018</time></dd>
+Date modified: March 29, 2018
     
 
