--- a/_posts/2017-12-08-equipe.markdown
+++ b/_posts/2017-12-08-equipe.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "À propos du Bureau de la transformation numérique"
+pubdate: "le déc 8 2017"
 gradelevel: 7.8
 ref: aboutus
 date:   2017-12-08 09:48:44 +0100
